kubernetes/beehive-influxdb-loader.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beehive-influxdb-loader
spec:
  selector:
    matchLabels:
      app: beehive-influxdb-loader
  template:
    metadata:
      labels:
        app: beehive-influxdb-loader
    spec:
      containers:
      - name: beehive-influxdb-loader
        image: waggle/beehive-influxdb-loader
        volumeMounts:
          - name: ca-certificate
            mountPath: "/etc/tls"
            readOnly: true
      volumes:
        - name: ca-certificate
          configMap:
            name: beehive-ca-certificate
