kubernetes/beehive-message-generator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beehive-message-generator
spec:
  selector:
    matchLabels:
      app: beehive-message-generator
  template:
    metadata:
      labels:
        app: beehive-message-generator
    spec:
      containers:
      - name: beehive-message-generator
        image: waggle/beehive-message-generator
        volumeMounts:
          - name: ca-certificate
            mountPath: "/etc/tls"
            readOnly: true
      volumes:
        - name: ca-certificate
          configMap:
            name: beehive-ca-certificate
