kubernetes/beehive-message-logger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beehive-message-logger
spec:
  selector:
    matchLabels:
      app: beehive-message-logger
  template:
    metadata:
      labels:
        app: beehive-message-logger
    spec:
      containers:
      - name: beehive-message-logger
        image: waggle/beehive-message-logger
        volumeMounts:
          - name: ca-certificate
            mountPath: "/etc/tls"
            readOnly: true
      volumes:
        - name: ca-certificate
          configMap:
            name: beehive-ca-certificate
