kubernetes/influxdb-loader.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb-loader
spec:
  selector:
    matchLabels:
      app: influxdb-loader
  template:
    metadata:
      labels:
        app: influxdb-loader
    spec:
      containers:
      - name: influxdb-loader
        image: waggle/beehive-influxdb-loader
        volumeMounts:
          - name: tls
            mountPath: "/etc/tls"
            readOnly: true
      volumes:
        - name: tls
          secret:
            secretName: influxdb-loader-tls-secret
