kubernetes/message-generator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-generator
spec:
  selector:
    matchLabels:
      app: message-generator
  template:
    metadata:
      labels:
        app: message-generator
    spec:
      containers:
      - name: message-generator
        image: waggle/beehive-message-generator
        volumeMounts:
          - name: tls
            mountPath: "/etc/tls"
            readOnly: true
      volumes:
        - name: tls
          secret:
            secretName: message-generator-tls-secret
