kubernetes/beehive-data-api.yaml
apiVersion: v1
kind: Service
metadata:
    name: beehive-data-api
spec:
    ports:
      - name: http
        port: 10000
        targetPort: 10000
    selector:
        app: beehive-data-api
    type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beehive-data-api
spec:
  selector:
    matchLabels:
      app: beehive-data-api
  template:
    metadata:
      labels:
        app: beehive-data-api
    spec:
      containers:
      - name: beehive-data-api
        image: waggle/beehive-data-api
        ports:
          - containerPort: 10000
            name: http
