kubernetes/beehive-influxdb.yaml
apiVersion: v1
kind: Service
metadata:
    name: beehive-influxdb
spec:
    ports:
      - name: beehive-influxdb
        port: 8086
        targetPort: 8086
    selector:
        app: beehive-influxdb
    type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
    labels:
        app: beehive-influxdb
    name: beehive-influxdb
spec:
    replicas: 1
    selector:
        matchLabels:
            app: beehive-influxdb
    serviceName: beehive-influxdb
    template:
        metadata:
            labels:
                app: beehive-influxdb
        spec:
            containers:
              - image: quay.io/influxdb/influxdb:v2.0.3
                name: beehive-influxdb
                ports:
                  - containerPort: 8086
                    name: influxdb
                volumeMounts:
                  - mountPath: /root/.influxdbv2
                    name: data
    volumeClaimTemplates:
      - metadata:
            name: data
        spec:
            accessModes:
              - ReadWriteOnce
            resources:
                requests:
                    storage: 1G
