kubernetes/beehive-rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: beehive-rabbitmq
spec:
  type: NodePort
  selector:
    app: beehive-rabbitmq
  ports:
    - name: amqps
      protocol: TCP
      port: 5671
      nodePort: 30000
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: beehive-rabbitmq
spec:
  serviceName: beehive-rabbitmq
  selector:
    matchLabels:
      app: beehive-rabbitmq
  template:
    metadata:
      labels:
        app: beehive-rabbitmq
    spec:
      containers:
      - name: beehive-rabbitmq
        image: rabbitmq:3.8.11-management-alpine
        volumeMounts:
          - name: config
            mountPath: /etc/rabbitmq
            readOnly: true
          - name: tls
            mountPath: /etc/tls
            readOnly: true
          - name: data
            mountPath: /var/lib/rabbitmq
        ports:
        - containerPort: 5671
        - containerPort: 15671
        livenessProbe:
          exec:
            command: ["/bin/sh", "-ec", "rabbitmq-diagnostics -q ping"]
          initialDelaySeconds: 30
          periodSeconds: 15
          timeoutSeconds: 10
        readinessProbe:
          exec:
            command: ["/bin/sh", "-ec", "rabbitmq-diagnostics -q check_running && rabbitmq-diagnostics -q check_local_alarms"]
          initialDelaySeconds: 5
          periodSeconds: 15
          timeoutSeconds: 10
      volumes:
        - name: config
          configMap:
            name: beehive-rabbitmq-config
        - name: tls
          secret:
            secretName: beehive-rabbitmq-tls-secret
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
