kubernetes/beehive-upload-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: beehive-upload-server
spec:
  type: NodePort
  selector:
    app: beehive-upload-server
  ports:
    - name: ssh
      protocol: TCP
      port: 22
      nodePort: 30002
---
# TODO use volume for managing private credentials
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beehive-upload-server
spec:
  selector:
    matchLabels:
      app: beehive-upload-server
  template:
    metadata:
      labels:
        app: beehive-upload-server
    spec:
      containers:
      - image: waggle/beehive-upload-server
        name: beehive-upload-server
        ports:
        - name: ssh
          containerPort: 22
        volumeMounts:
        - name: ssh-ca-key
          mountPath: /etc/ca
          readOnly: true
        - name: ssh-host-key
          mountPath: /etc/waggle
          readOnly: true
        livenessProbe:
          tcpSocket:
            port: ssh
          initialDelaySeconds: 5
          periodSeconds: 60
      volumes:
      - name: ssh-ca-key
        configMap:
          name: beehive-ssh-ca
      - name: ssh-host-key
        secret:
          secretName: beehive-upload-server-ssh-host-key
          defaultMode: 0600
