kubernetes/upload-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: beehive-upload-server
spec:
  selector:
    app: beehive-upload-server
  ports:
    - protocol: TCP
      port: 20021
      targetPort: 22
---
# TODO use volume for managing private credentials
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beehive-upload-server
spec:
  selector:
    matchLabels:
      app: beehive-upload-server
  template:
    metadata:
      labels:
        app: beehive-upload-server
    spec:
      containers:
      - image: waggle/beehive-upload-server:0.0.3
        name: beehive-upload-server
        ports:
        - name: ssh
          containerPort: 22
        volumeMounts:
        - name: ssh-host-key
          mountPath: /etc/waggle
          readOnly: true
        livenessProbe:
          tcpSocket:
            port: ssh
          initialDelaySeconds: 5
          periodSeconds: 60
      volumes:
      - name: ssh-host-key
        secret:
          secretName: upload-server-ssh-host-key-secret
          defaultMode: 0600
