kubernetes/beehive-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beehive-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  # TODO make domain name part of config
  - host: sdr.honeyhouse.one
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: beehive-data-api
            port:
              number: 10000
  # TODO make domain name part of config
  - host: influxdb.honeyhouse.one
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: beehive-influxdb
            port:
              number: 8086
